# rules_kubebuilder

./: BUILD.bazel
deepcopy-gen/: BUILD.bazel  deepcopy-gen-toolchain.bzl  deepcopy-gen.bzl  deps.bzl
scripts/: build-deepcopy-gen.sh
